--- a/priceandclasses.html
+++ b/priceandclasses.html
@@ -50,7 +50,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="/images/basic_icon.png" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -67,7 +67,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/attack_icon.png" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -84,7 +84,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="/images/exress_icon.png" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -101,7 +101,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/cassic_icon_.png" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -119,10 +119,10 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/private_icon.png" alt="" /></a>
 										</div>
 									</div>
-									<div class="col col2">
+									<div class="col col2"> 
 										<h3>Barre Private </h3>
 										<p>Amie Energy also offers private and semi private sessions.  Please email or phone for further information.</p>
 										<a href="#" class="button">Learn More</a>
