--- a/priceandclasses.html
+++ b/priceandclasses.html
@@ -66,9 +66,9 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Barre Basic</h3>
-										<p>For newbies to barre.  Full body workout.  Class incorporates using your own body weight as resistance combined with small hand weights and stability balls which overload the muscle.  Each class ends with several stretch tracks to assist with that longer looking graceful physique.</p>
-										<a href="#" class="button">Learn More</a>
+										<h2>Barre Basic</h2 >
+										<h3>For newbies to barre.  Full body workout.  Class incorporates using your own body weight as resistance combined with small hand weights and stability balls which overload the muscle.  Each class ends with several stretch tracks to assist with that longer looking graceful physique.</h3>
+<!--										<a href="#" class="button">Learn More</a>-->
 									</div>
 								</div>
 						</div>
@@ -83,9 +83,9 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Barre Attack</h3>
-										<p>For those experienced in barre with higher intensity and a faster pace of class.  Sweat burn laugh!</p>
-										<a href="#" class="button">Learn More</a>
+										<h2>Barre Attack</h2>
+										<h3>For those experienced in barre with higher intensity and a faster pace of class.  Sweat burn laugh!</h3>
+<!--										<a href="#" class="button">Learn More</a>-->
 									</div>
 								</div>
 						</div>
@@ -100,9 +100,9 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Barre Express </h3>
-										<p>45 minute lunchtime session tailored to the class.  Combination of Barre Basic and Barre Attack.  Suitable for all levels.</p>
-										<a href="#" class="button">Learn More</a>
+										<h2>Barre Express </h2>
+										<h3>45 minute lunchtime session tailored to the class.  Combination of Barre Basic and Barre Attack.  Suitable for all levels.</h3>
+<!--										<a href="#" class="button">Learn More</a>-->
 									</div>
 								</div>
 						</div>
@@ -117,9 +117,9 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Barre Classic </h3>
-										<p>Suitable for more mature ages or those recovering from surgery or injuries.  The most gentle low intensity.</p>
-										<a href="#" class="button">Learn More</a>
+										<h2>Barre Classic </h2>
+										<h3>Suitable for more mature ages or those recovering from surgery or injuries.  The most gentle low intensity.</h3>
+<!--										<a href="#" class="button">Learn More</a>-->
 									</div>
 								</div>
                         </div>
@@ -135,9 +135,9 @@
 										</div>
 									</div>
 									<div class="col col2"> 
-										<h3>Barre Private </h3>
-										<p>Amie Energy also offers private and semi private sessions.  Please email or phone for further information.</p>
-										<a href="#" class="button">Learn More</a>
+										<h2>Barre Private </h2>
+										<h3>Amie Energy also offers private and semi private sessions.  Please email or phone for further information.</h3>
+<!--										<a href="#" class="button">Learn More</a>-->
 									</div>
 								</div>
                         </div>
