--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header">
 				
 				<a href="#menu">Menu</a>
 			</header>
