--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								</div>
 								<div class="col col1">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/whyitsgood.jpg" alt="" /></a>
+										<a href="" class="link"><img src="images/whyitsgood.jpg" alt="" /></a>
 									</div>
 								</div>
 							</div>
